CRUD implementado para Criptideo, Avistamento e Testemunha